--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <title>krishnabhat</title>
 
     <link rel="stylesheet" href="css\styles.css" />
-
     <link rel="shortcut icon" href="images\favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body></body>
+  <body>
+    <nav>
+      <button class="active" href="#home">Home</button>
+      <button href="#contact">Contact</button>
+      <button href="#about">About</button>
+    </nav>
+    <footer>© Krishna Bhat 2023</footer>
+  </body>
 </html>
